<resources>
    <string name="app_name">ChopinsList</string>
    <string name="txt_login">Login</string>
    <string name="txt_senha">Senha</string>
    <string name="btn_logar">Entrar</string>
    <string name="btn_cadas">Cadastrar</string>
    <string name="txt_clogin">Digite o Login desejado:</string>
    <string name="txt_csenha">Digite a senha desejado:</string>
    <string name="txt_criarC">Finalizar Cadastro</string>
    <string name="btn_anunciar">Anunciar</string>
    <string name="btn_mAnuncios">Meus anúncios</string>
    <string name="btn_todosAnuncios">Ver anúncios</string>
    <string name="txt_tituloanuncio">Digite o título do anúncio:</string>
    <string name="txt_descricaoanuncio">Digite a descrição do anúncio:</string>
    <string name="txt_criarA">Anúnciar!</string>
    <string name="txt_tit">Título do anúncio:</string>
    <string name="txt_desc">Descrição do anúncio:</string>
    <string name="btn_deletar">Deletar anúncio</string>
    <string name="btn_att">Atualizar anúncio</string>
    <string name="btn_att2">Atualizar</string>

</resources>
